--- a/copper-oxide-te/copper-oxide-gen3.htm
+++ b/copper-oxide-te/copper-oxide-gen3.htm
@@ -1,1 +1,182 @@
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
+<HTML>
+<HEAD>
 
+<body background="bkg2.jpg">
+
+<TITLE>Copper Oxide Thermoelectric Generator Can Light An LED</TITLE>
+
+<META content="text/html; charset=windows-1252" http-equiv=Content-Type>
+<META content="MSHTML 5.00.2614.3500" name=GENERATOR></HEAD>
+
+
+<BODY>
+
+<!-- Search Google -->
+
+<center>
+
+<form method="get" action="http://www.google.com/custom" target="_top">
+
+<table bgcolor="#ffffff">
+
+<tr><td nowrap="nowrap" valign="top" align="left" height="32">
+
+<a href="http://www.google.com/">
+
+<img src="http://www.google.com/logos/Logo_25wht.gif" border="0" alt="Google" align="middle"></img></a>
+
+<label for="sbi" style="display: none">Enter your search terms</label>
+
+<input type="text" name="q" size="31" maxlength="255" value="" id="sbi"></input>
+
+<label for="sbb" style="display: none">Submit search form</label>
+
+<input type="submit" name="sa" value="Search" id="sbb"></input>
+
+<input type="hidden" name="client" value="pub-0982093050363034"></input>
+
+<input type="hidden" name="forid" value="1"></input>
+
+<input type="hidden" name="ie" value="ISO-8859-1"></input>
+
+<input type="hidden" name="oe" value="ISO-8859-1"></input>
+
+<input type="hidden" name="cof" value="GALT:#008000;GL:1;DIV:#336699;VLC:663399;AH:center;BGC:FFFFFF;LBGC:336699;ALC:0000FF;LC:0000FF;T:000000;GFNT:0000FF;GIMP:0000FF;FORID:1"></input>
+
+<input type="hidden" name="hl" value="en"></input>
+
+</td></tr></table>
+
+</form>
+
+</center>
+
+<!-- Search Google -->
+
+
+
+<hr>
+
+<center>
+
+
+
+<script type="text/javascript"><!--
+
+google_ad_client = "pub-0982093050363034";
+
+google_alternate_color = "0000FF";
+
+google_ad_width = 728;
+
+google_ad_height = 90;
+
+google_ad_format = "728x90_as";
+
+google_ad_type = "text_image";
+
+google_ad_channel = "";
+
+//-->
+
+</script>
+
+<script type="text/javascript"
+
+  src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+
+</script>
+
+
+
+</center>
+
+<hr>
+
+
+<basefont size="3"/><b>
+<H1 align=center><B>Copper Oxide Thermoelectric Generator Can Light An LED</B></h1>
+<H3 align="right"><B>By Nyle Steiner K7NS.</B></h3>
+<H3 align="right"><B>July 2011.</B></h3>  
+
+<p>
+<hr>
+
+<H2 align=center><B>Just 16 copper oxide junctions can produce enough voltage to light an LED.</B></h2>
+
+<P ALIGN=CENTER><IMG src="110715-5011-2002.jpg"/></center>
+<hr>
+Copper oxide, the kind that forms on pieces of copper when you heat them with a flame, is very fascinating stuff.  Besides being usable for other things such as making photo sensors, thermistors, pressure sensors and diodes, it can also be used to make an impressive homemade thermoelectric junction capable of producing hundreds of millivolts when heated with a flame.
+
+<p> 
+<hr>
+<H2 align=center><B>Making a simple copper oxide thermoelectric junction.</B></h2>
+
+<P ALIGN=CENTER><IMG src="110714-5006-1408.jpg"/></center>
+
+<p>The copper oxide thermoelectric generator or junction is very easy to make.  Just heat two pieces of ordinary copper wire in a propane flame, to form a copper oxide layer, and then place the two wires in contact with each other.  That is all there is to it.  An electrical potential will be produced between the two wires when one wire is heated to a much hotter temperature than the other.
+<p>The hottest wire will be negative and the cooler wire will be positive.
+
+
+<P ALIGN=CENTER><IMG src="5000-cr.jpg"/></center>
+<p>
+
+<P ALIGN=CENTER><IMG src="5000-600.jpg"/></center>
+
+<P ALIGN=CENTER><IMG src="110714-4994-1119.jpg"/></center>
+<p>A single copper oxide junction can easily produce enough current to deflect the meter to more than full scale when it is set to read 0 to 50 microamps or 0 to 100 millivolts.
+<p>With the meter set to read 0 to 500 millivolts the copper oxide junction can produce readings in excess of 300 millivolts.
+<p>The switch near the meter is a reversing switch for convenience whenever I want to reverse the connections to the meter.
+
+<hr>
+<H2 align=center><B>Coper oxide thermopile made with 16 junctions in series.</B></h2>
+<P ALIGN=CENTER><IMG src="4984-600.jpg"/></center>
+<p>This thermopile which consists of just 16 copper oxide junctions in series can produce between two and three volts when heated in a flame.  This thermopile is shown at the top of this page, producing enough voltage to light an LED.
+<p>It would require more than 100 thermocouples made of special wire in series to light the same LED.  It would require roughly 1600 copper and steel thermocouples to light the same LED.
+<p>The trade off is that the wire thermocouples can easily produce much more current than is easy to do with the copper oxide junction.
+Typically the copper oxide junction can easily produce hundreds of millivolts whereas a wire junction can easily produce hundreds of milliamps.
+
+<P ALIGN=CENTER><IMG src="4984-cr.jpg"/></center>
+<P ALIGN=CENTER><IMG src="4984-cr-3.jpg"/></center>
+
+<p>The pictures above are pretty self explanatory.  The wire pieces are made of 18 awg bare copper wire and are 3 inches long from the hot tips to the hairpin ends.  The L shaped bends are 3/4 inch from the hot tips.  The circular wood mount for all of the wire pieces is 6 inches in diameter and the cutout center section is 3 1/2 inches in diameter.
+<p>All of the copper wire pieces are mounted at intervals of 22 1/2 degrees to equally space them around the circle.
+<p>Each L shaped wire is the cold positive side of a junction and each longer straight piece is the hot negative side of a junction.
+<p>The thermoelectric junctions are formed by the copper oxide between each straight piece of wire and the L shaped piece that rests on top of it.
+
+<hr>
+<p>Most articles, that describe copper oxide projects, usually discuss the subject of cupric oxide (black) or cuprous oxide (red) and the task of separating them.  From many experiences in making thermoelectric generators and doing other copper oxide experiments, I have found that it usually just doesn't matter.  When a copper oxide device is made professionally this of course is an important subject but for the purpose of home experimentation, impressive results can usually be obtained without having to bother with separating the black copper oxide from the red copper oxide.  
+<p>When heating pieces of copper, it is typical to have a top layer of black oxide form with a layer of red oxide underneath
+but, I have found that the black copper oxide layer may also contain a significant amount of red copper oxide.
+<p>Pieces of black copper oxide will often fall off in flakes after heating a piece of copper.  I once ground up some of these black looking copper oxide flakes in a mortar and pestle and the result was some reddish brown powder that looked a lot like red cuprous oxide.  I have also done other experiments that indicated the presence of red cuprous oxide in black cupric oxide flakes.
+
+<hr>
+<H2 align=center><B>What is happening?</B></h2>
+<p>I have spent my entire life reading whatever technical books and articles I could find and can recall seeing only one book that tells how to make something like this and none that explain how this device works.  It would be safe to say however, that an explanation could be found in the institutionalized literature.  Not being presently affiliated with any institutions, I do not have ready access to most of their literature which makes the cost of reading it prohibitive.  So, I will offer my own take on what is happening.
+
+<p>A thermocouple is generally thought of as being a junction between two dissimilar metals but it might be better to say that it is a junction between two dissimilar conductors.  Touching the two oxidized wires together forms a junction of copper oxide to copper oxide.  This is not where the action is.  The copper oxide on both wires should be thought of as one solid conductor between the two copper wires - a very short one at that.  This can now be seen as the classic two thermocouples back to back circuit.  We have a copper - copper oxide junction on the hot wire and an opposing copper oxide - copper junction on the cold wire.  With this in mind it is now easy to view this device as being a normal thermocouple circuit.
+
+<p>It is easy to wonder how this device could work at all because of the copper oxide, that is between the two wires, being almost an insulator.  Copper oxide however, also acts like a thermistor with a very high negative temperature coefficient.  Even the "cold" wire still gets hot enough that the resistance of the copper oxide drops relatively to a very low value - enabling current to flow.
+
+<p>I must give credit to an older book "Simple Scientific Experiments" by Aurel de Ratti as being the one and only book I have ever seen that makes the reader aware of this copper oxide thermoelectric generator.  This book also contains other fascinating stuff.  It is reprinted and sold by Lindsay Publications Inc.
+
+<hr>
+
+<h3><a href="http://www.sparkbangbuzz.com/">Sparkbangbuzz Home Page.</a></h3>
+
+
+<script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
+
+</script>
+
+<script type="text/javascript">
+
+_uacct = "UA-490386-1";
+
+urchinTracker();
+
+</script>
+
+</BODY>
+</HTML>
